--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -45,7 +45,7 @@
                             @obj.Author
                         </td>
                         <td>
-                            @obj.ISBN
+							@obj.CategoryID
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
