--- a/BulkyWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
 	<div class="card-header bg-secundary bg-gradient ml-0 py-3">
 		<div class="row">
 			<div class="col-12 text-center">
@@ -51,6 +51,13 @@
                     <input asp-for="Price100" type="text" class="form-control border-0 shadow" />
                     <label asp-for="Price100" class="ms-2"></label>
                     <span asp-validation-for="Price100" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-12">
+                   <select asp-for="CategoryID" asp-items="@(ViewData["CategoryList"] as List<SelectListItem>)" type="text" class="form-control border-0 shadow">
+                        <option disabled selected>-- SELECT CATEGORY --</option>   
+                    </select>
+                    <label asp-for="CategoryID" class="ms-2"></label>
+                    <span asp-validation-for="CategoryID" class="text-danger"></span>
                 </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
